--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ngrok - Mac-os RDP
+name: mac
 on: 
   workflow_dispatch:
 defaults:
@@ -7,16 +7,16 @@ defaults:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
-    - name: Setting the Environment Up.
+    - name: Setting the environment up.
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-      run: |
-        wget https://raw.githubusercontent.com/PRO-E5/RDP-E1/RDP/mac-os/files/ngrok-m/setup.sh
-        source setup.sh "Alone215" "Alone215" "$NGROK_AUTH_TOKEN"
+        VNC_USER_PASSWORD: ${{ secrets.VNC_USER_PASSWORD }}
+        VNC_PASSWORD: ${{ secrets.VNC_PASSWORD }}
+      run: source configure.sh "$VNC_USER_PASSWORD" "$VNC_PASSWORD" "$NGROK_AUTH_TOKEN"
     - name: ngrok is now listening to VNC connections on...
       run: curl --silent http://127.0.0.1:4040/api/tunnels | jq '.tunnels[0].public_url'
-    - name: Setup tmate Session.
+    - name: Setup tmate session
       uses: mxschmitt/action-tmate@v2
